<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollAddEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding_size"
    tools:context=".activities.AddEditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddTitle"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/film_title_label" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddDirector"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEditAddTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/director_label" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddLanguage"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEditAddDirector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/language_label" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddMoviePremiere"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEditAddLanguage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddMoviePremiere"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:hint="@string/premiere_label" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddScore"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEditAddMoviePremiere">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddScore"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:hint="@string/film_score_line" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddAgeRating"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEditAddScore">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddAgeRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/age_label" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddUrl"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEditAddAgeRating">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_url_image" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditAddFilmDuration"
            android:layout_width="@dimen/default_element_input"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_element_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEditAddUrl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEditAddFilmDuration"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:hint="@string/Film_duration" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>